--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>New Site</title>
+  <title>Nic Aitch</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  {{> aside}}
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3">
+        {{> aside}}
+      </div>
+
+      <div class="col-sm-8 col-sm-offset-1">
+        Projects
+      </div>
+    </div>
+  </div>
 </body>
 </html>
