Update project section descriptions

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <div class="col-sm-8 col-sm-offset-1">
         {{> project_group
           title='Active Projects'
-          description='1 month'
+          description='30 days'
           set=active_projects }}
 
         {{> project_group
