Fix project group description alignment

--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,17 @@
       <div class="col-sm-8 col-sm-offset-1">
         {{> project_group
           title='Active Projects'
-          description='30 days'
+          description='Last 30 days'
           set=active_projects }}
 
         {{> project_group
           title='Recent Projects'
-          description='6 months'
+          description='Last 6 months'
           set=current_projects }}
 
         {{> project_group
           title='Recent Contributions'
-          description='12 months'
+          description='Last 12 months'
           set=recent_contributions }}
 
         {{> project_group
