Ajust padding, svh

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,13 @@
             window.onclick = skipDelay;
         </script>
     </head>
-    <body class="h-screen bg-white dark:bg-black dark:text-gray-400">
-        <div id="app" class="container px-10 max-w-[80ch] overflow-hidden">
+    <body class="h-svh bg-white dark:bg-black dark:text-gray-400">
+        <div
+            id="app"
+            class="container sm:px-16 sm:py-8 px-10 max-w-[80ch] overflow-hidden"
+        >
             <div
-                class="flex items-center size-20 rounded-full overflow-hidden my-10 dark:opacity-80 bg-yellow-500 border-4 border-yellow-500 hover:animate-spin"
+                class="flex items-center size-20 rounded-full overflow-hidden my-10 dark:opacity-60 bg-yellow-500 border-4 border-yellow-500 hover:animate-spin"
             >
                 <img
                     src="avatar.png"
@@ -69,7 +72,7 @@
                 <span class="animate-reveal animate-delay-4200">
                     ✉️ Contact me at
                     <a
-                        class="border-b-2 transition-all border-gray-500/20 dark:border-gray-500/40 dark:hover:text-yellow-500/80 hover:border-current"
+                        class="border-b-2 transition-all border-gray-300 hover:border-current"
                         href="mailto:im.nic@hey.com"
                         >im.nic@hey.com</a
                     >
