Add tracking code

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             window.onclick = skipDelay;
         </script>
     </head>
-    <body class="h-svh bg-white dark:bg-black dark:text-gray-400">
+    <body class="h-svh bg-white dark:bg-gray-950 dark:text-gray-400">
         <div
             id="app"
             class="container sm:px-16 sm:py-8 px-10 max-w-[80ch] overflow-hidden"
@@ -79,5 +79,23 @@
                 </span>
             </div>
         </div>
+
+        <script type="text/javascript">
+            var _gauges = _gauges || [];
+            (function () {
+                var t = document.createElement("script");
+                t.type = "text/javascript";
+                t.async = true;
+                t.id = "gauges-tracker";
+                t.setAttribute("data-site-id", "4f83803b613f5d23300000a9");
+                t.setAttribute(
+                    "data-track-path",
+                    "https://track.gaug.es/track.gif",
+                );
+                t.src = "https://d2fuc4clr7gvcn.cloudfront.net/track.js";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(t, s);
+            })();
+        </script>
     </body>
 </html>
