--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
             name="description"
             content="Hi, I'm Nic. I'm a frontend engineer with an eye for detail and a passion for creating things that are a pleasure to use."
         />
-        <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+        <link
+            rel="icon"
+            href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨‍💻</text></svg>"
+        />
         <link rel="stylesheet" href="./style.css" type="text/css" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +20,7 @@
             rel="stylesheet"
         />
 
-        <title>Nic Haynes</title>
+        <title>Nic Haynes - Frontend Engineer</title>
 
         <script>
             function skipDelay(e) {
