Reword content, timing

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Hi, I'm Nic. I'm a frontend engineer with an eye for detail and a passion for creating things that are a pleasure to use."
+            content="Hi, I'm Nic. I'm a frontend engineer with a passion for creating things that are a joy to use."
         />
         <link
             rel="icon"
@@ -21,14 +21,6 @@
         />
 
         <title>Nic Haynes - Frontend Engineer</title>
-
-        <script>
-            function skipDelay(e) {
-                document.body.classList.add("skip-delay");
-            }
-            window.onkeyup = skipDelay;
-            window.onclick = skipDelay;
-        </script>
     </head>
     <body class="h-svh bg-white dark:bg-gray-950 dark:text-gray-400">
         <div
@@ -46,22 +38,22 @@
 
             <div id="intro" class="leading-normal text-3xl my-10">
                 <span class="animate-reveal animate-delay-300 font-bold">
-                    Hi,</span
-                >
+                    Hi,
+                </span>
                 <span class="animate-reveal animate-delay-500 font-bold"
                     >I'm Nic.
                 </span>
-                <span class="animate-reveal animate-delay-1600"
-                    >I'm a frontend engineer
+                <span class="animate-reveal animate-delay-1600">
+                    I'm a frontend engineer
                 </span>
-                <span class="animate-reveal animate-delay-2000"
-                    >with an eye for detail
+                <span class="animate-reveal animate-delay-2000">
+                    with a passion
                 </span>
-                <span class="animate-reveal animate-delay-2800"
-                    >and a passion
+                <span class="animate-reveal animate-delay-2600">
+                    for creating things
                 </span>
-                <span class="animate-reveal animate-delay-3600"
-                    >for creating things that are a pleasure to use.
+                <span class="animate-reveal animate-delay-3000">
+                    that are a joy to use.
                 </span>
             </div>
 
@@ -77,11 +69,20 @@
                     <a
                         class="border-b-2 transition-all border-gray-300 hover:border-current"
                         href="mailto:im.nic@hey.com"
-                        >im.nic@hey.com</a
                     >
+                        im.nic@hey.com
+                    </a>
                 </span>
             </div>
         </div>
+
+        <script>
+            function skipDelay(e) {
+                document.body.classList.add("skip-delay");
+            }
+            window.onkeyup = skipDelay;
+            window.onclick = skipDelay;
+        </script>
 
         <script type="text/javascript">
             var _gauges = _gauges || [];
