--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,9 @@
                     🧑‍💻 Currently at NVIDIA
                 </span>
                 <span class="animate-reveal animate-delay-4200">
-                    ✉️ Contact me at
+                    💬 Reach out at
                     <a
-                        class="border-b-2 transition-all border-gray-300 hover:border-current"
+                        class="border-b-2 transition-all border-gray-300 hover:border-yellow-500 dark:hover:text-yellow-400/80"
                         href="mailto:im.nic@hey.com"
                     >
                         im.nic@hey.com
