Adjust border color

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                 <span class="animate-reveal animate-delay-4200">
                     💬 Reach out at
                     <a
-                        class="border-b-2 transition-all border-gray-300 hover:border-yellow-500 dark:hover:text-yellow-400/80"
+                        class="border-b-2 transition-all border-gray-300 dark:border-gray-700 hover:border-yellow-500 dark:hover:text-yellow-400/80"
                         href="mailto:im.nic@hey.com"
                     >
                         im.nic@hey.com
